--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,16 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+#navlinks{
+    animation: translate .4s;
+}
+
+@keyframes translate {
+    0%{
+        transform: translateY(-100%);
+    }
+    100%{
+        transform: translateY(0%);
+    }
+}
