--- a/tailwind/output.css
+++ b/tailwind/output.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 /*
 ! tailwindcss v3.0.9 | MIT License | https://tailwindcss.com
 */
@@ -423,7 +427,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
-*, ::before, ::after {
+*, ::before, ::after{
   --tw-translate-x: 0;
   --tw-translate-y: 0;
   --tw-rotate: 0;
@@ -439,244 +443,352 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow-colored: 0 0 #0000;
 }
 
-.container {
+.container{
   width: 100%;
 }
 
-@media (min-width: 640px) {
-  .container {
+@media (min-width: 640px){
+  .container{
     max-width: 640px;
   }
 }
 
-@media (min-width: 768px) {
-  .container {
+@media (min-width: 768px){
+  .container{
     max-width: 768px;
   }
 }
 
-@media (min-width: 1024px) {
-  .container {
+@media (min-width: 1024px){
+  .container{
     max-width: 1024px;
   }
 }
 
-@media (min-width: 1280px) {
-  .container {
+@media (min-width: 1280px){
+  .container{
     max-width: 1280px;
   }
 }
 
-@media (min-width: 1536px) {
-  .container {
+@media (min-width: 1536px){
+  .container{
     max-width: 1536px;
   }
 }
 
-.fixed {
-  position: fixed;
-}
-
-.absolute {
+.absolute{
   position: absolute;
 }
 
-.relative {
+.relative{
   position: relative;
 }
 
-.inset-0 {
+.inset-0{
   top: 0px;
   right: 0px;
   bottom: 0px;
   left: 0px;
 }
 
-.z-10 {
+.top-1\/2{
+  top: 50%;
+}
+
+.left-1\/2{
+  left: 50%;
+}
+
+.-bottom-12{
+  bottom: -3rem;
+}
+
+.z-10{
   z-index: 10;
 }
 
-.m-auto {
+.z-50{
+  z-index: 50;
+}
+
+.z-20{
+  z-index: 20;
+}
+
+.z-40{
+  z-index: 40;
+}
+
+.m-auto{
   margin: auto;
 }
 
-.mt-2 {
+.m-3{
+  margin: 0.75rem;
+}
+
+.mt-2{
   margin-top: 0.5rem;
 }
 
-.ml-2 {
+.ml-2{
   margin-left: 0.5rem;
 }
 
-.mt-4 {
+.mt-4{
   margin-top: 1rem;
 }
 
-.block {
+.mt-28{
+  margin-top: 7rem;
+}
+
+.mt-52{
+  margin-top: 13rem;
+}
+
+.mt-24{
+  margin-top: 6rem;
+}
+
+.block{
   display: block;
 }
 
-.flex {
+.flex{
   display: flex;
 }
 
-.hidden {
+.hidden{
   display: none;
 }
 
-.h-10 {
+.h-10{
   height: 2.5rem;
 }
 
-.h-0\.5 {
+.h-0\.5{
   height: 0.125rem;
 }
 
-.h-0 {
+.h-0{
   height: 0px;
 }
 
-.h-screen {
+.h-3{
+  height: 0.75rem;
+}
+
+.h-screen{
   height: 100vh;
 }
 
-.h-max {
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
+.h-full{
+  height: 100%;
 }
 
-.max-h-screen {
-  max-height: 100vh;
-}
-
-.min-h-screen {
+.min-h-screen{
   min-height: 100vh;
 }
 
-.w-full {
+.w-full{
   width: 100%;
 }
 
-.w-14 {
+.w-14{
   width: 3.5rem;
 }
 
-.w-10 {
+.w-10{
   width: 2.5rem;
 }
 
-.w-6 {
+.w-6{
   width: 1.5rem;
 }
 
-.rotate-45 {
+.w-3{
+  width: 0.75rem;
+}
+
+.min-w-full{
+  min-width: 100%;
+}
+
+.-translate-x-1\/2{
+  --tw-translate-x: -50%;
+  transform: var(--tw-transform);
+}
+
+.rotate-45{
   --tw-rotate: 45deg;
   transform: var(--tw-transform);
 }
 
-.-rotate-45 {
+.-rotate-45{
   --tw-rotate: -45deg;
   transform: var(--tw-transform);
 }
 
-.flex-wrap {
+.cursor-pointer{
+  cursor: pointer;
+}
+
+.flex-wrap{
   flex-wrap: wrap;
 }
 
-.items-center {
+.items-center{
   align-items: center;
 }
 
-.justify-between {
+.justify-center{
+  justify-content: center;
+}
+
+.justify-between{
   justify-content: space-between;
 }
 
-.rounded {
+.rounded{
   border-radius: 0.25rem;
 }
 
-.border-b-2 {
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
+.border-b-2{
   border-bottom-width: 2px;
 }
 
-.border-transparent {
+.border-transparent{
   border-color: transparent;
 }
 
-.bg-white1 {
+.bg-white1{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-bgNavbar {
+.bg-bgNavbar{
   --tw-bg-opacity: 1;
   background-color: rgb(19 19 19 / var(--tw-bg-opacity));
 }
 
-.bg-greenContactUs {
+.bg-greenContactUs{
   --tw-bg-opacity: 1;
   background-color: rgb(31 201 22 / var(--tw-bg-opacity));
 }
 
-.py-3 {
+.bg-greenAgro{
+  --tw-bg-opacity: 1;
+  background-color: rgb(97 206 112 / var(--tw-bg-opacity));
+}
+
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.object-center{
+  -o-object-position: center;
+     object-position: center;
+}
+
+.py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
 
-.px-2 {
+.px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
 
-.px-6 {
+.px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
 
-.pt-4 {
+.px-12{
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.pt-4{
   padding-top: 1rem;
 }
 
-.pb-6 {
+.pb-6{
   padding-bottom: 1.5rem;
 }
 
-.text-center {
+.text-center{
   text-align: center;
 }
 
-.text-lg {
+.font-poppins{
+  font-family: Poppins;
+}
+
+.font-montserrat{
+  font-family: Montserrat;
+}
+
+.text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
-.font-semibold {
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.font-semibold{
   font-weight: 600;
 }
 
-.text-white1 {
+.font-medium{
+  font-weight: 500;
+}
+
+.font-thin{
+  font-weight: 100;
+}
+
+.uppercase{
+  text-transform: uppercase;
+}
+
+.tracking-wide{
+  letter-spacing: 0.025em;
+}
+
+.text-white1{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-greenAgro {
+.text-greenAgro{
   --tw-text-opacity: 1;
   color: rgb(97 206 112 / var(--tw-text-opacity));
 }
 
-.text-bgNavbar {
-  --tw-text-opacity: 1;
-  color: rgb(19 19 19 / var(--tw-text-opacity));
-}
-
-.shadow-md {
+.shadow-md{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.transition {
+.transition{
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
@@ -684,7 +796,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-duration: 150ms;
 }
 
-.duration-300 {
+.duration-300{
   transition-duration: 300ms;
 }
 
@@ -713,103 +825,108 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
-.hover\:bg-bgNavbar:hover {
+.hover\:bg-bgNavbar:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(19 19 19 / var(--tw-bg-opacity));
 }
 
-.hover\:text-greenAgro:hover {
+.hover\:text-greenAgro:hover{
   --tw-text-opacity: 1;
   color: rgb(97 206 112 / var(--tw-text-opacity));
 }
 
-.focus\:bg-bgNavbar:focus {
+.focus\:bg-bgNavbar:focus{
   --tw-bg-opacity: 1;
   background-color: rgb(19 19 19 / var(--tw-bg-opacity));
 }
 
-.active\:bg-bgNavbar:active {
+.active\:bg-bgNavbar:active{
   --tw-bg-opacity: 1;
   background-color: rgb(19 19 19 / var(--tw-bg-opacity));
 }
 
-@media (min-width: 1024px) {
-  .lg\:mt-0 {
+@media (min-width: 1024px){
+  .lg\:mt-0{
     margin-top: 0px;
   }
 
-  .lg\:block {
+  .lg\:mt-36{
+    margin-top: 9rem;
+  }
+
+  .lg\:block{
     display: block;
   }
 
-  .lg\:flex {
+  .lg\:flex{
     display: flex;
   }
 
-  .lg\:hidden {
+  .lg\:hidden{
     display: none;
   }
 
-  .lg\:h-auto {
+  .lg\:h-auto{
     height: auto;
   }
 
-  .lg\:w-auto {
+  .lg\:w-auto{
     width: auto;
   }
 
-  .lg\:w-full {
+  .lg\:w-full{
     width: 100%;
   }
 
-  .lg\:items-center {
+  .lg\:items-center{
     align-items: center;
   }
 
-  .lg\:space-x-10 > :not([hidden]) ~ :not([hidden]) {
+  .lg\:space-x-10 > :not([hidden]) ~ :not([hidden]){
     --tw-space-x-reverse: 0;
     margin-right: calc(2.5rem * var(--tw-space-x-reverse));
     margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .lg\:border-greenAgro {
+  .lg\:border-greenAgro{
     --tw-border-opacity: 1;
     border-color: rgb(97 206 112 / var(--tw-border-opacity));
   }
 
-  .lg\:bg-transparent {
+  .lg\:bg-transparent{
     background-color: transparent;
   }
 
-  .lg\:py-4 {
+  .lg\:py-4{
     padding-top: 1rem;
     padding-bottom: 1rem;
   }
 
-  .lg\:px-0 {
+  .lg\:px-0{
     padding-left: 0px;
     padding-right: 0px;
   }
 
-  .lg\:px-5 {
+  .lg\:px-5{
     padding-left: 1.25rem;
     padding-right: 1.25rem;
   }
 
-  .lg\:pt-0 {
+  .lg\:pt-0{
     padding-top: 0px;
   }
 
-  .lg\:pb-0 {
+  .lg\:pb-0{
     padding-bottom: 0px;
   }
 
-  .lg\:hover\:border-greenAgro:hover {
+  .lg\:hover\:border-greenAgro:hover{
     --tw-border-opacity: 1;
     border-color: rgb(97 206 112 / var(--tw-border-opacity));
   }
 
-  .lg\:hover\:pb-1:hover {
+  .lg\:hover\:pb-1:hover{
     padding-bottom: 0.25rem;
   }
 }
+
