--- a/tailwind/output.css
+++ b/tailwind/output.css
@@ -500,20 +500,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: 50%;
 }
 
-.-bottom-12{
-  bottom: -3rem;
-}
-
 .z-10{
   z-index: 10;
 }
 
-.z-50{
-  z-index: 50;
+.z-30{
+  z-index: 30;
 }
 
-.z-20{
-  z-index: 20;
+.z-50{
+  z-index: 50;
 }
 
 .z-40{
@@ -522,10 +518,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .m-auto{
   margin: auto;
-}
-
-.m-3{
-  margin: 0.75rem;
 }
 
 .mt-2{
@@ -540,16 +532,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 1rem;
 }
 
-.mt-28{
-  margin-top: 7rem;
-}
-
-.mt-52{
-  margin-top: 13rem;
+.ml-4{
+  margin-left: 1rem;
 }
 
 .mt-24{
   margin-top: 6rem;
+}
+
+.mt-20{
+  margin-top: 5rem;
 }
 
 .block{
@@ -558,6 +550,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .flex{
   display: flex;
+}
+
+.grid{
+  display: grid;
 }
 
 .hidden{
@@ -576,16 +572,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 0px;
 }
 
-.h-3{
-  height: 0.75rem;
+.h-full{
+  height: 100%;
 }
 
 .h-screen{
   height: 100vh;
-}
-
-.h-full{
-  height: 100%;
 }
 
 .min-h-screen{
@@ -608,12 +600,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 1.5rem;
 }
 
-.w-3{
-  width: 0.75rem;
+.w-4{
+  width: 1rem;
 }
 
-.min-w-full{
-  min-width: 100%;
+.w-auto{
+  width: auto;
 }
 
 .-translate-x-1\/2{
@@ -631,8 +623,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   transform: var(--tw-transform);
 }
 
-.cursor-pointer{
-  cursor: pointer;
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.flex-col{
+  flex-direction: column;
 }
 
 .flex-wrap{
@@ -655,8 +651,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 0.25rem;
 }
 
-.rounded-md{
-  border-radius: 0.375rem;
+.rounded-3xl{
+  border-radius: 1.5rem;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
 }
 
 .border-b-2{
@@ -697,6 +697,14 @@ Ensure the default browser behavior of the `hidden` attribute.
      object-position: center;
 }
 
+.p-8{
+  padding: 2rem;
+}
+
+.p-4{
+  padding: 1rem;
+}
+
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -712,9 +720,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 1.5rem;
 }
 
-.px-12{
-  padding-left: 3rem;
-  padding-right: 3rem;
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.px-28{
+  padding-left: 7rem;
+  padding-right: 7rem;
+}
+
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .pt-4{
@@ -725,8 +743,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 1.5rem;
 }
 
+.pl-2{
+  padding-left: 0.5rem;
+}
+
 .text-center{
   text-align: center;
+}
+
+.text-justify{
+  text-align: justify;
 }
 
 .font-poppins{
@@ -742,14 +768,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.75rem;
 }
 
-.text-6xl{
-  font-size: 3.75rem;
-  line-height: 1;
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-semibold{
@@ -764,8 +790,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-weight: 100;
 }
 
+.font-extrabold{
+  font-weight: 800;
+}
+
 .uppercase{
   text-transform: uppercase;
+}
+
+.leading-8{
+  line-height: 2rem;
 }
 
 .tracking-wide{
@@ -780,6 +814,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-greenAgro{
   --tw-text-opacity: 1;
   color: rgb(97 206 112 / var(--tw-text-opacity));
+}
+
+.text-blackText{
+  --tw-text-opacity: 1;
+  color: rgb(17 17 23 / var(--tw-text-opacity));
 }
 
 .shadow-md{
@@ -845,13 +884,38 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(19 19 19 / var(--tw-bg-opacity));
 }
 
+@media (min-width: 768px){
+  .md\:ml-5{
+    margin-left: 1.25rem;
+  }
+
+  .md\:w-8{
+    width: 2rem;
+  }
+
+  .md\:px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .md\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .md\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
 @media (min-width: 1024px){
   .lg\:mt-0{
     margin-top: 0px;
   }
 
-  .lg\:mt-36{
-    margin-top: 9rem;
+  .lg\:ml-0{
+    margin-left: 0px;
   }
 
   .lg\:block{
@@ -870,6 +934,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     height: auto;
   }
 
+  .lg\:h-1{
+    height: 0.25rem;
+  }
+
   .lg\:w-auto{
     width: auto;
   }
@@ -878,8 +946,20 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 100%;
   }
 
+  .lg\:w-16{
+    width: 4rem;
+  }
+
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .lg\:items-center{
     align-items: center;
+  }
+
+  .lg\:gap-2{
+    gap: 0.5rem;
   }
 
   .lg\:space-x-10 > :not([hidden]) ~ :not([hidden]){
@@ -912,12 +992,51 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-right: 1.25rem;
   }
 
+  .lg\:px-12{
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .lg\:py-8{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  .lg\:px-28{
+    padding-left: 7rem;
+    padding-right: 7rem;
+  }
+
   .lg\:pt-0{
     padding-top: 0px;
   }
 
   .lg\:pb-0{
     padding-bottom: 0px;
+  }
+
+  .lg\:pr-28{
+    padding-right: 7rem;
+  }
+
+  .lg\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .lg\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .lg\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .lg\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .lg\:hover\:border-greenAgro:hover{
