--- a/tailwind/output.css
+++ b/tailwind/output.css
@@ -477,6 +477,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
+.fixed{
+  position: fixed;
+}
+
 .absolute{
   position: absolute;
 }
@@ -520,6 +524,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin: auto;
 }
 
+.mx-8{
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.mx-28{
+  margin-left: 7rem;
+  margin-right: 7rem;
+}
+
+.mx-56{
+  margin-left: 14rem;
+  margin-right: 14rem;
+}
+
 .mt-2{
   margin-top: 0.5rem;
 }
@@ -542,6 +561,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mt-20{
   margin-top: 5rem;
+}
+
+.mt-10{
+  margin-top: 2.5rem;
 }
 
 .block{
@@ -580,6 +603,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 100vh;
 }
 
+.h-72{
+  height: 18rem;
+}
+
 .min-h-screen{
   min-height: 100vh;
 }
@@ -604,8 +631,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 1rem;
 }
 
-.w-auto{
-  width: auto;
+.w-72{
+  width: 18rem;
 }
 
 .-translate-x-1\/2{
@@ -623,8 +650,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   transform: var(--tw-transform);
 }
 
+.grid-flow-col{
+  grid-auto-flow: column;
+}
+
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-rows-6{
+  grid-template-rows: repeat(6, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -647,6 +682,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   justify-content: space-between;
 }
 
+.justify-items-center{
+  justify-items: center;
+}
+
+.gap-4{
+  gap: 1rem;
+}
+
+.gap-y-3{
+  row-gap: 0.75rem;
+}
+
 .rounded{
   border-radius: 0.25rem;
 }
@@ -657,6 +704,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .rounded-lg{
   border-radius: 0.5rem;
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
 }
 
 .border-b-2{
@@ -685,6 +736,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-greenAgro{
   --tw-bg-opacity: 1;
   background-color: rgb(97 206 112 / var(--tw-bg-opacity));
+}
+
+.bg-local{
+  background-attachment: local;
+}
+
+.bg-left-top{
+  background-position: left top;
+}
+
+.bg-no-repeat{
+  background-repeat: no-repeat;
 }
 
 .object-cover{
@@ -723,11 +786,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.px-28{
-  padding-left: 7rem;
-  padding-right: 7rem;
 }
 
 .px-8{
@@ -778,6 +836,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1rem;
 }
 
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .font-semibold{
   font-weight: 600;
 }
@@ -792,6 +860,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .font-extrabold{
   font-weight: 800;
+}
+
+.font-bold{
+  font-weight: 700;
 }
 
 .uppercase{
@@ -814,6 +886,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-greenAgro{
   --tw-text-opacity: 1;
   color: rgb(97 206 112 / var(--tw-text-opacity));
+}
+
+.text-greenOurProduct{
+  --tw-text-opacity: 1;
+  color: rgb(153 227 105 / var(--tw-text-opacity));
 }
 
 .text-blackText{
@@ -893,6 +970,14 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 2rem;
   }
 
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:grid-rows-2{
+    grid-template-rows: repeat(2, minmax(0, 1fr));
+  }
+
   .md\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -916,6 +1001,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:ml-0{
     margin-left: 0px;
+  }
+
+  .lg\:mt-72{
+    margin-top: 18rem;
   }
 
   .lg\:block{
@@ -952,6 +1041,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-rows-2{
+    grid-template-rows: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:items-center{
@@ -997,14 +1090,19 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-right: 3rem;
   }
 
+  .lg\:px-28{
+    padding-left: 7rem;
+    padding-right: 7rem;
+  }
+
   .lg\:py-8{
     padding-top: 2rem;
     padding-bottom: 2rem;
   }
 
-  .lg\:px-28{
-    padding-left: 7rem;
-    padding-right: 7rem;
+  .lg\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .lg\:pt-0{
