--- a/tailwind/output.css
+++ b/tailwind/output.css
@@ -572,16 +572,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 3.5rem;
 }
 
-.mb-3{
-  margin-bottom: 0.75rem;
-}
-
 .mb-2{
   margin-bottom: 0.5rem;
-}
-
-.mb-14{
-  margin-bottom: 3.5rem;
 }
 
 .block{
@@ -701,16 +693,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-cols-4{
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
 .grid-cols-5{
   grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .grid-rows-6{
@@ -771,6 +755,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .rounded-2xl{
   border-radius: 1rem;
+}
+
+.border-2{
+  border-width: 2px;
 }
 
 .border-b-2{
@@ -873,19 +861,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 2rem;
 }
 
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
 
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .pl-2{
@@ -955,6 +938,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-semibold{
@@ -1050,6 +1038,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-duration: 300ms;
 }
 
+.duration-200{
+  transition-duration: 200ms;
+}
+
 #navlinks{
   -webkit-animation: translate .4s;
           animation: translate .4s;
@@ -1075,18 +1067,65 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
+.hover\:w-10:hover{
+  width: 2.5rem;
+}
+
+.hover\:w-9:hover{
+  width: 2.25rem;
+}
+
+.hover\:border-b-white:hover{
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .hover\:bg-bgNavbar:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(19 19 19 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-hoverGreenAgro:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(84 195 99 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-greenOurProduct:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 227 105 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-opacity-80:hover{
   --tw-bg-opacity: 0.8;
 }
 
+.hover\:bg-opacity-90:hover{
+  --tw-bg-opacity: 0.9;
+}
+
+.hover\:text-2xl:hover{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.hover\:text-base:hover{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .hover\:text-greenAgro:hover{
   --tw-text-opacity: 1;
   color: rgb(97 206 112 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-300:hover{
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.hover\:text-blackText:hover{
+  --tw-text-opacity: 1;
+  color: rgb(17 17 23 / var(--tw-text-opacity));
 }
 
 .focus\:bg-bgNavbar:focus{
