--- a/tailwind/output.css
+++ b/tailwind/output.css
@@ -505,6 +505,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: 50%;
 }
 
+.top-1\/4{
+  top: 25%;
+}
+
+.top-1\/3{
+  top: 33.333333%;
+}
+
+.top-3\.5{
+  top: 0.875rem;
+}
+
+.top-3{
+  top: 0.75rem;
+}
+
 .z-30{
   z-index: 30;
 }
@@ -620,6 +636,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 5rem;
 }
 
+.h-screen{
+  height: 100vh;
+}
+
 .min-h-screen{
   min-height: 100vh;
 }
@@ -689,16 +709,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-auto-flow: column;
 }
 
+.auto-rows-max{
+  grid-auto-rows: -webkit-max-content;
+  grid-auto-rows: max-content;
+}
+
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .grid-cols-5{
   grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-
-.grid-rows-6{
-  grid-template-rows: repeat(6, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -755,10 +776,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .rounded-2xl{
   border-radius: 1rem;
-}
-
-.border-2{
-  border-width: 2px;
 }
 
 .border-b-2{
@@ -864,11 +881,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .pl-2{
@@ -1075,19 +1087,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 2.25rem;
 }
 
-.hover\:border-b-white:hover{
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
 .hover\:bg-bgNavbar:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(19 19 19 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-hoverGreenAgro:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(84 195 99 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-greenOurProduct:hover{
@@ -1097,10 +1099,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .hover\:bg-opacity-80:hover{
   --tw-bg-opacity: 0.8;
-}
-
-.hover\:bg-opacity-90:hover{
-  --tw-bg-opacity: 0.9;
 }
 
 .hover\:text-2xl:hover{
@@ -1116,16 +1114,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:text-greenAgro:hover{
   --tw-text-opacity: 1;
   color: rgb(97 206 112 / var(--tw-text-opacity));
-}
-
-.hover\:text-gray-300:hover{
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
-.hover\:text-blackText:hover{
-  --tw-text-opacity: 1;
-  color: rgb(17 17 23 / var(--tw-text-opacity));
 }
 
 .focus\:bg-bgNavbar:focus{
@@ -1151,6 +1139,15 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 2rem;
   }
 
+  .md\:grid-flow-col{
+    grid-auto-flow: column;
+  }
+
+  .md\:auto-rows-max{
+    grid-auto-rows: -webkit-max-content;
+    grid-auto-rows: max-content;
+  }
+
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1159,8 +1156,8 @@ Ensure the default browser behavior of the `hidden` attribute.
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
-  .md\:grid-rows-6{
-    grid-template-rows: repeat(6, minmax(0, 1fr));
+  .md\:grid-rows-4{
+    grid-template-rows: repeat(4, minmax(0, 1fr));
   }
 
   .md\:px-6{
@@ -1266,6 +1263,18 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 1.75rem;
   }
 
+  .lg\:w-8{
+    width: 2rem;
+  }
+
+  .lg\:w-9{
+    width: 2.25rem;
+  }
+
+  .lg\:grid-flow-col{
+    grid-auto-flow: column;
+  }
+
   .lg\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1274,8 +1283,8 @@ Ensure the default browser behavior of the `hidden` attribute.
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
-  .lg\:grid-rows-2{
-    grid-template-rows: repeat(2, minmax(0, 1fr));
+  .lg\:grid-rows-4{
+    grid-template-rows: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:items-center{
@@ -1388,6 +1397,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   .lg\:text-gray-300{
     --tw-text-opacity: 1;
     color: rgb(209 213 219 / var(--tw-text-opacity));
+  }
+
+  .lg\:text-blackText{
+    --tw-text-opacity: 1;
+    color: rgb(17 17 23 / var(--tw-text-opacity));
   }
 
   .lg\:hover\:border-greenAgro:hover{
