--- a/tailwind/output.css
+++ b/tailwind/output.css
@@ -502,6 +502,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: 0px;
 }
 
+.bottom-0{
+  bottom: 0px;
+}
+
+.right-0{
+  right: 0px;
+}
+
 .top-1\/2{
   top: 50%;
 }
@@ -510,20 +518,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: 50%;
 }
 
-.right-0{
-  right: 0px;
-}
-
-.bottom-0{
-  bottom: 0px;
-}
-
-.z-30{
-  z-index: 30;
+.top-1\/3{
+  top: 33.333333%;
 }
 
 .z-50{
   z-index: 50;
+}
+
+.z-30{
+  z-index: 30;
 }
 
 .z-40{
@@ -543,11 +547,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 1.25rem;
 }
 
-.mx-3{
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
-}
-
 .my-3{
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
@@ -561,6 +560,19 @@ Ensure the default browser behavior of the `hidden` attribute.
 .my-6{
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+}
+
+.mx-3{
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
+.mr-4{
+  margin-right: 1rem;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
 }
 
 .ml-6{
@@ -647,6 +659,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
+.h-full{
+  height: 100%;
+}
+
 .h-10{
   height: 2.5rem;
 }
@@ -657,10 +673,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .h-0{
   height: 0px;
-}
-
-.h-full{
-  height: 100%;
 }
 
 .h-auto{
@@ -689,6 +701,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-full{
   width: 100%;
+}
+
+.w-16{
+  width: 4rem;
 }
 
 .w-8{
@@ -1156,11 +1172,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(17 17 23 / var(--tw-text-opacity));
 }
 
-.text-supportBy{
-  --tw-text-opacity: 1;
-  color: rgb(145 151 159 / var(--tw-text-opacity));
-}
-
 .text-greenOurProduct{
   --tw-text-opacity: 1;
   color: rgb(153 227 105 / var(--tw-text-opacity));
@@ -1169,6 +1180,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-gray-300{
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.text-supportBy{
+  --tw-text-opacity: 1;
+  color: rgb(145 151 159 / var(--tw-text-opacity));
 }
 
 .text-opacity-80{
@@ -1230,16 +1246,85 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 2.5rem;
 }
 
+.hover\:scale-110:hover{
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: var(--tw-transform);
+}
+
 .hover\:scale-125:hover{
   --tw-scale-x: 1.25;
   --tw-scale-y: 1.25;
   transform: var(--tw-transform);
 }
 
-.hover\:scale-110:hover{
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
-  transform: var(--tw-transform);
+@-webkit-keyframes ping{
+  75%, 100%{
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+@keyframes ping{
+  75%, 100%{
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+.hover\:animate-ping:hover{
+  -webkit-animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+          animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+
+@-webkit-keyframes pulse{
+  50%{
+    opacity: .5;
+  }
+}
+
+@keyframes pulse{
+  50%{
+    opacity: .5;
+  }
+}
+
+.hover\:animate-pulse:hover{
+  -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+          animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+@-webkit-keyframes bounce{
+  0%, 100%{
+    transform: translateY(-25%);
+    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
+            animation-timing-function: cubic-bezier(0.8,0,1,1);
+  }
+
+  50%{
+    transform: none;
+    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
+            animation-timing-function: cubic-bezier(0,0,0.2,1);
+  }
+}
+
+@keyframes bounce{
+  0%, 100%{
+    transform: translateY(-25%);
+    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
+            animation-timing-function: cubic-bezier(0.8,0,1,1);
+  }
+
+  50%{
+    transform: none;
+    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
+            animation-timing-function: cubic-bezier(0,0,0.2,1);
+  }
+}
+
+.hover\:animate-bounce:hover{
+  -webkit-animation: bounce 1s infinite;
+          animation: bounce 1s infinite;
 }
 
 .hover\:bg-bgNavbar:hover{
@@ -1290,8 +1375,16 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-top: 2.5rem;
   }
 
+  .md\:ml-28{
+    margin-left: 7rem;
+  }
+
   .md\:h-72{
     height: 18rem;
+  }
+
+  .md\:w-16{
+    width: 4rem;
   }
 
   .md\:w-8{
@@ -1355,6 +1448,11 @@ Ensure the default browser behavior of the `hidden` attribute.
     line-height: 2rem;
   }
 
+  .md\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
   .md\:text-gray-300{
     --tw-text-opacity: 1;
     color: rgb(209 213 219 / var(--tw-text-opacity));
@@ -1367,6 +1465,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 @media (min-width: 1024px){
+  .lg\:top-1\/3{
+    top: 33.333333%;
+  }
+
   .lg\:my-24{
     margin-top: 6rem;
     margin-bottom: 6rem;
@@ -1375,6 +1477,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   .lg\:my-9{
     margin-top: 2.25rem;
     margin-bottom: 2.25rem;
+  }
+
+  .lg\:mr-8{
+    margin-right: 2rem;
+  }
+
+  .lg\:mb-8{
+    margin-bottom: 2rem;
   }
 
   .lg\:ml-4{
@@ -1413,8 +1523,8 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-top: 1.25rem;
   }
 
-  .lg\:mt-32{
-    margin-top: 8rem;
+  .lg\:mt-44{
+    margin-top: 11rem;
   }
 
   .lg\:mt-10{
@@ -1431,14 +1541,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:mt-72{
     margin-top: 18rem;
-  }
-
-  .lg\:mt-56{
-    margin-top: 14rem;
-  }
-
-  .lg\:mt-44{
-    margin-top: 11rem;
   }
 
   .lg\:block{
@@ -1461,10 +1563,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     height: 0.25rem;
   }
 
-  .lg\:h-24{
-    height: 6rem;
-  }
-
   .lg\:h-0\.5{
     height: 0.125rem;
   }
@@ -1475,6 +1573,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:h-96{
     height: 24rem;
+  }
+
+  .lg\:h-24{
+    height: 6rem;
+  }
+
+  .lg\:w-20{
+    width: 5rem;
   }
 
   .lg\:w-auto{
