--- a/tailwind/output.css
+++ b/tailwind/output.css
@@ -518,10 +518,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: 50%;
 }
 
-.top-1\/3{
-  top: 33.333333%;
-}
-
 .z-50{
   z-index: 50;
 }
@@ -534,12 +530,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   z-index: 40;
 }
 
+.col-span-2{
+  grid-column: span 2 / span 2;
+}
+
 .col-span-4{
   grid-column: span 4 / span 4;
 }
 
 .m-auto{
   margin: auto;
+}
+
+.m-5{
+  margin: 1.25rem;
 }
 
 .mx-5{
@@ -691,8 +695,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 15rem;
 }
 
-.h-screen{
-  height: 100vh;
+.h-32{
+  height: 8rem;
 }
 
 .h-72{
@@ -757,12 +761,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 5rem;
 }
 
-.w-10\/12{
-  width: 83.333333%;
+.w-32{
+  width: 8rem;
 }
 
-.w-screen{
-  width: 100vw;
+.w-10\/12{
+  width: 83.333333%;
 }
 
 .w-5{
@@ -1043,6 +1047,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 1.25rem;
 }
 
+.pt-2{
+  padding-top: 0.5rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -1238,6 +1246,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
+.focus-within\:scale-150:focus-within{
+  --tw-scale-x: 1.5;
+  --tw-scale-y: 1.5;
+  transform: var(--tw-transform);
+}
+
 .hover\:w-9:hover{
   width: 2.25rem;
 }
@@ -1256,75 +1270,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-scale-x: 1.25;
   --tw-scale-y: 1.25;
   transform: var(--tw-transform);
-}
-
-@-webkit-keyframes ping{
-  75%, 100%{
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-
-@keyframes ping{
-  75%, 100%{
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-
-.hover\:animate-ping:hover{
-  -webkit-animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-          animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-}
-
-@-webkit-keyframes pulse{
-  50%{
-    opacity: .5;
-  }
-}
-
-@keyframes pulse{
-  50%{
-    opacity: .5;
-  }
-}
-
-.hover\:animate-pulse:hover{
-  -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-          animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-}
-
-@-webkit-keyframes bounce{
-  0%, 100%{
-    transform: translateY(-25%);
-    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
-            animation-timing-function: cubic-bezier(0.8,0,1,1);
-  }
-
-  50%{
-    transform: none;
-    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
-            animation-timing-function: cubic-bezier(0,0,0.2,1);
-  }
-}
-
-@keyframes bounce{
-  0%, 100%{
-    transform: translateY(-25%);
-    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
-            animation-timing-function: cubic-bezier(0.8,0,1,1);
-  }
-
-  50%{
-    transform: none;
-    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
-            animation-timing-function: cubic-bezier(0,0,0.2,1);
-  }
-}
-
-.hover\:animate-bounce:hover{
-  -webkit-animation: bounce 1s infinite;
-          animation: bounce 1s infinite;
 }
 
 .hover\:bg-bgNavbar:hover{
@@ -1356,9 +1301,27 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(97 206 112 / var(--tw-text-opacity));
 }
 
+.focus\:scale-150:focus{
+  --tw-scale-x: 1.5;
+  --tw-scale-y: 1.5;
+  transform: var(--tw-transform);
+}
+
 .focus\:bg-bgNavbar:focus{
   --tw-bg-opacity: 1;
   background-color: rgb(19 19 19 / var(--tw-bg-opacity));
+}
+
+.focus-visible\:scale-150:focus-visible{
+  --tw-scale-x: 1.5;
+  --tw-scale-y: 1.5;
+  transform: var(--tw-transform);
+}
+
+.active\:scale-150:active{
+  --tw-scale-x: 1.5;
+  --tw-scale-y: 1.5;
+  transform: var(--tw-transform);
 }
 
 .active\:bg-bgNavbar:active{
@@ -1367,16 +1330,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 @media (min-width: 768px){
+  .md\:ml-28{
+    margin-left: 7rem;
+  }
+
   .md\:ml-5{
     margin-left: 1.25rem;
   }
 
   .md\:mt-10{
     margin-top: 2.5rem;
-  }
-
-  .md\:ml-28{
-    margin-left: 7rem;
   }
 
   .md\:h-72{
@@ -1485,10 +1448,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:mb-8{
     margin-bottom: 2rem;
-  }
-
-  .lg\:ml-4{
-    margin-left: 1rem;
   }
 
   .lg\:mt-0{
