--- a/tailwind/output.css
+++ b/tailwind/output.css
@@ -530,12 +530,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   z-index: 40;
 }
 
+.col-span-4{
+  grid-column: span 4 / span 4;
+}
+
 .col-span-2{
   grid-column: span 2 / span 2;
 }
 
-.col-span-4{
-  grid-column: span 4 / span 4;
+.col-span-1{
+  grid-column: span 1 / span 1;
 }
 
 .m-auto{
@@ -695,10 +699,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 15rem;
 }
 
-.h-32{
-  height: 8rem;
-}
-
 .h-72{
   height: 18rem;
 }
@@ -761,10 +761,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 5rem;
 }
 
-.w-32{
-  width: 8rem;
-}
-
 .w-10\/12{
   width: 83.333333%;
 }
@@ -794,6 +790,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .grid-flow-row{
   grid-auto-flow: row;
+}
+
+.grid-flow-col{
+  grid-auto-flow: column;
 }
 
 .grid-cols-1{
@@ -1047,10 +1047,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 1.25rem;
 }
 
-.pt-2{
-  padding-top: 0.5rem;
-}
-
 .text-left{
   text-align: left;
 }
@@ -1246,12 +1242,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
-.focus-within\:scale-150:focus-within{
-  --tw-scale-x: 1.5;
-  --tw-scale-y: 1.5;
-  transform: var(--tw-transform);
-}
-
 .hover\:w-9:hover{
   width: 2.25rem;
 }
@@ -1301,27 +1291,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(97 206 112 / var(--tw-text-opacity));
 }
 
-.focus\:scale-150:focus{
-  --tw-scale-x: 1.5;
-  --tw-scale-y: 1.5;
-  transform: var(--tw-transform);
-}
-
 .focus\:bg-bgNavbar:focus{
   --tw-bg-opacity: 1;
   background-color: rgb(19 19 19 / var(--tw-bg-opacity));
-}
-
-.focus-visible\:scale-150:focus-visible{
-  --tw-scale-x: 1.5;
-  --tw-scale-y: 1.5;
-  transform: var(--tw-transform);
-}
-
-.active\:scale-150:active{
-  --tw-scale-x: 1.5;
-  --tw-scale-y: 1.5;
-  transform: var(--tw-transform);
 }
 
 .active\:bg-bgNavbar:active{
@@ -1430,6 +1402,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 @media (min-width: 1024px){
   .lg\:top-1\/3{
     top: 33.333333%;
+  }
+
+  .lg\:col-span-2{
+    grid-column: span 2 / span 2;
   }
 
   .lg\:my-24{
